Addedd patent section

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -412,8 +412,8 @@ As a final consideration, we note that the problem of endmember extraction and s
 In this paper, we introduced the GSM as a novel method for unsupervised endmember extraction and spectral unmixing. The model was compared to three varieties of NMF on a synthetic data set of linearly mixed spectra from the USGS spectral database. Across all noise levels, the GSM outperformed NMF for both endmember accuracy and abundance estimation. When applied to real HSI collected over a north Texas pond, the GSM accurately models spectral mixing including non-linear effects. Rhodamine dye was released into the pond to simulate a localized contaminant source. Endmember abundances estimated by the GSM corresponding to the dye accurately tracked the evolution of the plume as it mixed into the surrounding water. These examples illustrate the power of combining non-linear mixing models together with UAV-based hyperspectral imaging for environmental monitoring and water quality analysis. Future work will further develop the GSM to incorporate wavelength dependent spectral variability. Additionally the GSM may prove useful for air quality studies as a non-linear source apportionment model.
 
 
-%\section{Patents}
-
+\section{Patents}
+A provisional US patent application for this work has been filed on 2024-10-10 entitled: \textit{Generative Simplex Mapping: Non-Linear Endmember Extraction And Spectral Unmixing For Hyperspectral Imagery}, application number 63/705,854.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
